--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ sfml-window-d-2.dll
 whiterect.jpg
 x64/
 Debug/
-Gomoku.vcxproj
-Gomoku.vcxproj.filters
-Gomoku.vcxproj.user
+Gra.vcxproj
+Gra.vcxproj.filters
+Gra.vcxproj.user
